--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "vite": "^4.3.2"
   }
 }
