--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "buffer-from": "^1.1.2",
     "postcss": "^8.4.23",
+    "qs": "^6.11.1",
     "tailwindcss": "^3.3.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
